fixed dropdown being covered by delete entry

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -15,6 +15,10 @@
     text-align: center;
 }
 
+.dropdown {
+	z-index: 3;
+}
+
 .jumbotron:after {
      content:"";
      background: url("../images/city-1.jpg");
